--- a/package.json
+++ b/package.json
@@ -38,32 +38,33 @@
   "dependencies": {
     "@babel/runtime": "^7.7.7",
     "@tarojs/components": "3.4.9",
+    "@tarojs/plugin-framework-react": "3.4.9",
+    "@tarojs/react": "3.4.9",
     "@tarojs/runtime": "3.4.9",
     "@tarojs/taro": "3.4.9",
-    "@tarojs/plugin-framework-react": "3.4.9",
-    "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0",
-    "redux": "^4.0.0",
-    "react-redux": "^7.2.0",
+    "react": "^17.0.0",
     "react-dom": "^17.0.0",
-    "@tarojs/react": "3.4.9",
-    "react": "^17.0.0"
+    "react-redux": "^7.2.0",
+    "redux": "^4.0.0",
+    "redux-logger": "^3.0.6",
+    "redux-thunk": "^2.3.0"
   },
   "devDependencies": {
-    "@types/webpack-env": "^1.13.6",
-    "@types/react": "^17.0.2",
-    "@tarojs/mini-runner": "3.4.9",
     "@babel/core": "^7.8.0",
+    "@tarojs/mini-runner": "3.4.9",
     "@tarojs/webpack-runner": "3.4.9",
-    "babel-preset-taro": "3.4.9",
-    "eslint-config-taro": "3.4.9",
-    "eslint": "^8.12.0",
-    "eslint-plugin-react": "^7.8.2",
-    "eslint-plugin-import": "^2.12.0",
-    "eslint-plugin-react-hooks": "^4.2.0",
-    "stylelint": "9.3.0",
-    "@typescript-eslint/parser": "^5.20.0",
+    "@types/react": "^17.0.2",
+    "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
+    "@typescript-eslint/parser": "^5.20.0",
+    "babel-preset-taro": "3.4.9",
+    "eslint": "^8.12.0",
+    "eslint-config-taro": "3.4.9",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-react": "^7.8.2",
+    "eslint-plugin-react-hooks": "^4.2.0",
+    "prettier": "^2.6.2",
+    "stylelint": "9.3.0",
     "typescript": "^4.1.0"
   },
   "resolutions": {
