--- a/package.json
+++ b/package.json
@@ -37,23 +37,43 @@
   "license": "MIT",
   "dependencies": {
     "@babel/runtime": "^7.7.7",
+    "@reduxjs/toolkit": "^1.8.3",
     "@tarojs/components": "3.4.9",
     "@tarojs/plugin-framework-react": "3.4.9",
     "@tarojs/react": "3.4.9",
     "@tarojs/runtime": "3.4.9",
     "@tarojs/taro": "3.4.9",
+    "classnames": "^2.3.1",
+    "jasmine": "^4.2.1",
+    "lodash": "^4.17.21",
+    "moment": "^2.29.4",
+    "observable-hooks": "^4.2.0",
+    "ramda": "^0.28.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0",
     "react-redux": "^7.2.0",
+    "react-router-redux": "^4.0.8",
     "redux": "^4.0.0",
+    "redux-actions": "^2.6.5",
     "redux-logger": "^3.0.6",
-    "redux-thunk": "^2.3.0"
+    "redux-observable": "^2.0.0",
+    "redux-thunk": "^2.3.0",
+    "reselect": "^4.1.6",
+    "rxjs": "^7.5.5"
   },
   "devDependencies": {
     "@babel/core": "^7.8.0",
     "@tarojs/mini-runner": "3.4.9",
     "@tarojs/webpack-runner": "3.4.9",
+    "@types/classnames": "^2.3.1",
+    "@types/jasmine": "^4.0.3",
+    "@types/lodash": "^4.14.182",
+    "@types/moment": "^2.13.0",
+    "@types/ramda": "^0.28.14",
     "@types/react": "^17.0.2",
+    "@types/react-router-redux": "^5.0.21",
+    "@types/redux-actions": "^2.6.2",
+    "@types/reselect": "^2.2.0",
     "@types/webpack-env": "^1.13.6",
     "@typescript-eslint/eslint-plugin": "^5.20.0",
     "@typescript-eslint/parser": "^5.20.0",
@@ -65,6 +85,8 @@
     "eslint-plugin-react-hooks": "^4.2.0",
     "prettier": "^2.6.2",
     "stylelint": "9.3.0",
+    "tsconfig-paths": "^4.0.0",
+    "tslib": "^2.4.0",
     "typescript": "^4.1.0"
   },
   "resolutions": {
